welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ':' expected but ')' found.
	def color(i):Color = {
                   ^Array1:22: error: identifier expected but '}' found.
}
^